# cli-sandbox

./: .gitignore  README.md  app.py  build-exe.py  cli.spec  config.yaml  greetings.json  greetings.txt  pyproject.toml  usage_log.json  テスト.json  履歴2025-05-13.json
.github/workflows/: test.yml
src/cli_sandbox/: main.py  main_api.py
src/cli_sandbox/commands/: goodbye.py  greet.py  load.py  load_json.py  log.py  save.py  save_json.py
tests/: test_api.py  test_cli.py
